# power-forecasting-mlops

./: .env.example  .gitignore  README.md  docker-compose.yaml  dummy_model_registration.py  makefile  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: lint.yaml  run_pipeline.yaml
dags/: check_unprocessed_dates.py  dags.py  etl_data.py  requirements.txt  startup.sh  watermark.json
data/: weather_data.csv
docs/: README.md
images/: architecture_diagram.drawio
inference_api/: main.py  schemas.py
lambda/: approved_model.py  daily_pipeline.py  extract_weather_data.py  send_approval_email.py  succeeded_deploy.py  trigger_deploy.py  unzip_power_usage.py  update_package.py
model/: mvp.ipynb
notebook/: pyspark.ipynb
notebooks/: model_exploration.ipynb  pyspark.ipynb
pipeline/: config.yaml
pipeline/deployment/: deployment_pipelien.py
pipeline/deployment_pipeline/: deploy_step.py  deployment_pipelien.py  deployment_pipeline.py  model_deployment.py
pipeline/model/: columns.yaml  config.yaml  data_loader.py  evaluate.py  feature_encoder.py  feature_engineering.py  model.py  model_deployment.py  mvp.ipynb  pipeliene_aws.py  pipeliene_tmp.py  pipeline.py  pipeline_aws.py  preprocess.py  run_pipeline.py  visualization.py
pipeline/model/common/: feature_encoder.py
pipeline/model/output/20250507_113401/: feature_importance.csv  model.joblib  model_metrics.csv
pipeline/model_pipeline/: model_pipeline.py  pipeline_aws.py  run_pipeline.py
src/: config.yaml  data_loader.py  dataprep_from_future_store.py  evaluate.py  feature_encoder.py  inference.py  ingest_feature_store.py  model_deployment.py  model_exploration.ipynb  preprocess.py  requirements.txt  train.py  visualization.py
terraform/: iam_roles.tf  main.tf  variables.tf
terraform/modules/api_gateway/: api_geteway.tf
terraform/modules/dynamodb/: dynamodb.tf
terraform/modules/emr/: emr.tf
terraform/modules/eventbridge/: eventbridge.tf
terraform/modules/feature_store/: feature_store.tf
terraform/modules/iam/: emr_role.tf  feature_store_role.tf  forecast_roles.tf  lambda_approve_model.tf  lambda_deploy_role.tf  lambda_email_role.tf  lambda_extract_data_role.tf  lambda_pipeline_exec.tf  lambda_succeeded_deploy_role.tf  lambda_update_package_role.tf  mwaa_role.tf  notebook_role.tf  user.tf
terraform/modules/lambda/: lambda.tf  variables.tf
terraform/modules/mwaa/: mwaa.tf
terraform/modules/network/: network.tf
terraform/modules/s3/: buckets.tf
test/: dummy_model_registration.py
